# werewolf-agent

./: .gitignore  .pylintrc  README.md  pytest.ini
.github/workflows/: build.yml
client/: README.md
client/src/: App.tsx  types.ts
client/src/components/: ActionPanel.tsx
client/src/services/: mockGameEngine.ts
docs/: TESTING_GUIDE.md  protocol_zh-cn.md
sdk/: README.md  __init__.py  agent.py  interface.py  messages.py  runner.py  websocket_client.py
sdk/tests/: test_integration.py  test_sdk_skeleton.py
server/: main.py  pyproject.toml
server/agent_server/: agent_server.py
server/game_controller/: game_runner.py
server/game_logic/: game.py  game_config.py  player.py  result.py
server/recorder/: recorder.py
server/tests/: test_agent_server.py  test_game.py  test_game_config.py  test_game_runner.py  test_player.py  test_recorder.py  test_result.py
tests/: README.md
werewolf-agent/client/: README.md
werewolf-agent/docs/: protocol.md  rule-en.md  rule-zh.md
werewolf-agent/sdk/: README.md
werewolf-agent/server/: README.md  game.py  main.py  pyproject.toml
werewolf-agent/server/game_controller/: game_runner.py
werewolf-agent/server/game_logic/: game.py
werewolf-agent/server/recorder/: recorder.py
werewolf-agent/server/tests/: test_agent_server.py  test_game.py
werewolf-agent/tests/: README.md  test_dummy.py
